--- a/sample.uvprojx
+++ b/sample.uvprojx
@@ -629,6 +629,36 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>CAN</GroupName>
+          <Files>
+            <File>
+              <FileName>CAN.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\CAN\CAN.h</FilePath>
+            </File>
+            <File>
+              <FileName>IRQ_CAN.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\CAN\IRQ_CAN.c</FilePath>
+            </File>
+            <File>
+              <FileName>lib_CAN.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\CAN\lib_CAN.c</FilePath>
+            </File>
+            <File>
+              <FileName>can_manager.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\CAN\can_manager.c</FilePath>
+            </File>
+            <File>
+              <FileName>can_manager.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\CAN\can_manager.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>::CMSIS</GroupName>
         </Group>
       </Groups>
